# smithers

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  PROMPT.md  PR_GRAPH_SUBPATH.md  RALPH.md  README.md  TUI_DESIGN.md  devtools-workflow.toon  mint.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.smithers/: package.json
changelogs/: 0.14.0.md  0.15.0.md  0.15.1.md
docs/: ENGINEERING_REDESIGN.md  README.md  burns-spec.md  codebase-layout.md  daemon-api-reference.md  docs.json  index.mdx  installation.mdx  introduction.mdx  jjhub-gap-analysis.md  llms-core.txt  llms-full.txt  llms.txt  mint.json  quickstart.mdx  recipes.mdx  repository-guide.md  tour.mdx  uispec.md
examples/: 02_dependencies.py  03_parallel.py  04_caching.py  05_tools.py  06_code_review_pipeline.py  07_research_agent.py  alert-suppressor.jsx  audit.jsx  benchmark-sheriff.jsx  bisect-guide.jsx  blog-analyzer-pipeline.jsx  branch-doctor.jsx  canary-judge.jsx  change-blast-radius.jsx  changelog.jsx  classifier-switchboard.jsx  code-review-loop.jsx  collector-probe.jsx  command-watchdog.jsx  compliance-evidence-collector.jsx  config-diff-explainer.jsx  contract-drift-sentinel.jsx  coverage-loop.jsx  debate.jsx  dependency-update.jsx  discovery.jsx  doc-sync.jsx  docs-fixup-bot.jsx  docs-patcher.jsx  dynamic-schema-enricher.jsx  error-clusterer.jsx  etl.jsx  extract-anything-workbench.jsx  fail-only-report.jsx  failing-test-author.jsx  fan-out-fan-in.jsx  feedback-pulse.jsx  financial-inbox-guard.jsx  flake-hunter.jsx  form-filler-assistant.jsx  (+56 more)
(+1024 files in other folders)
